--- a/style/index.css
+++ b/style/index.css
@@ -35,6 +35,9 @@ nav button:hover{
     text-decoration: underline;
 }
 
+nav button a:visited{
+    color: blue;
+}
 .content{
     display: flex;
     flex-direction: column;
@@ -47,6 +50,19 @@ nav button:hover{
     margin-bottom: 20px;
 }
 
+.image{
+    display: flex;
+    align-items: center;
+    margin-bottom: 20px;
+}
+
+.image span{
+    margin-top: 50px;
+    color: #4285f4;
+    font-size: 1.2rem;
+    font-weight: bold;
+    margin-left: 10px;
+}
 form{
     display: flex;
     flex-direction: column;
