--- a/style/advanced-search.css
+++ b/style/advanced-search.css
@@ -9,8 +9,9 @@ body{
     background-color: #fff;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items:flex-start;
     height: 100vh;
+    margin-left: 20px;
 }
 
 nav{
@@ -21,9 +22,9 @@ nav{
 }
 
 nav button{
-    background: none;
     border: none;
-    color:#5f6368;
+    background: none;
+    color: #5f6368;
     font-size: 1.1rem;
     margin-left: 10px;
     cursor: pointer;
