--- a/style/index.css
+++ b/style/index.css
@@ -88,6 +88,10 @@ input[type="text"]:focus{
     box-shadow: 0 1px 6px rgba(32, 33, 36, 0.3);
 }
 
+.submit-btns{
+    display: flex;
+    flex-direction: row;
+}
 input[type="submit"]{
     background-color: #f8f9fa;
     border: 1px solid #f8f9fa;
